# nrf5340-app

./: .gitignore  BLE_TESTING_README.md  CMakeLists.txt  README.md  WAMR_INTEGRATION_STATUS.md  WAMR_RESEARCH.md  WASM3_INTEGRATION_README.md  WASM_INTEGRATION_PLAN.md  a.py  build.sh  flash.sh  generate_ble_docs.py  prj.conf  requirements.txt  requirements_test.txt  run_ble_tests.sh  serial_monitor.py  test.wasm  test_add.wasm  test_ble_communication.py  test_ble_comprehensive.py  test_mtu_negotiation.py  test_sprite_service.py  test_wasm3_integration.py  test_wasm_send.py  test_wasm_service_basic.py  west.yml
child_image/: hci_rpmsg.conf
src/: main.c  wamr_wrapper.c  wamr_wrapper.h  wasm3_wrapper.c  wasm3_wrapper.h  wasm_interpreter.c  wasm_interpreter.h  wasm_test_module.h
src/services/: ble_packet_handlers.h  ble_services.c  ble_services.h  control_service.c  control_service.h  data_service.c  data_service.h  device_info_service.c  device_info_service.h  dfu_service.c  dfu_service.h  sprite_service.c  sprite_service.h  wasm_service.c  wasm_service.h
tests/: README.md  __init__.py  conftest.py  pytest.ini  run_pytest_tests.py  test_ble_comprehensive.py  test_ble_connection.py  test_control_service.py  test_data_service.py  test_debug_multipacket.py  test_debug_packet_sizes.py  test_debug_state_tracking.py  test_debug_wasm_handler.py  test_device_info_service.py  test_dfu_service.py  test_existing_wasm.py  test_mtu_negotiation.py  test_rust_fibonacci_e2e.py  test_rust_simple_e2e.py  test_simple_example.py  test_simple_wasm.py  test_sprite_service.py  test_verify_8byte_wasm.py  test_wasm_c.py  test_wasm_characteristics.py  test_wasm_service.py  test_wasm_upload_debug.py  test_wat_wasm_files.py  wasm_client.py
tests/c_wasm_test/: Makefile  simple.c  simple.wasm
tests/go_wasm_test/: main.go  simple.wasm
tests/rust_fibonacci_wasm/src/: lib.rs
tests/rust_simple_99/: Cargo.toml
tests/rust_simple_99/.cargo/: config.toml
tests/rust_simple_99/src/: lib.rs
tests/wasm_files/compiled/: c_simple.wasm  large_test.wasm  medium_test.wasm  minimal_test.wasm  (+1 more)
~/.ccache/: ccache.conf
(+9 files in other folders)
